Mutexes properly mocked.

--- a/tools/cmock/pkcs_mbedtls/project.yml
+++ b/tools/cmock/pkcs_mbedtls/project.yml
@@ -2,6 +2,7 @@
 :cmock:
   :mock_prefix: mock_
   :when_no_prototypes: :warn
+  :treat_externs: :include
   :enforce_strict_ordering: TRUE
   :plugins:
     - :ignore
@@ -24,6 +25,7 @@
     - <stdbool.h>
     - <stdint.h>
     - <fcntl.h>
+    - dummy_mutex.h
   :treat_externs: :exclude  # Now the extern-ed functions will be mocked.
   :weak: __attribute__((weak))
   :verbosity: 3
@@ -38,3 +40,4 @@
     - "iot_pkcs11.h" # For iot_pkcs11_pal.h
     - "md_internal.h"
     - "pk_internal.h"
+      #- "mock_dummy_mutex.h"
