--- a/tools/cmock/pkcs_wrapper/project.yml
+++ b/tools/cmock/pkcs_wrapper/project.yml
@@ -2,6 +2,7 @@
   :mock_prefix: mock_
   :mock_path: wrapper_mocks
   :when_no_prototypes: :warn
+  :treat_externs: :include
   :enforce_strict_ordering: TRUE
   :plugins:
     - :ignore
