MISRA doc and config update for unix.

--- a/tools/coverity/misra.config
+++ b/tools/coverity/misra.config
@@ -19,6 +19,14 @@
             reason: "Allow inclusion of function like macros. Logging is done using function like macros."
         },
         {
+            deviation: "Directive 4.12",
+            reason: "Allow use of malloc. This library uses malloc to create cryptographic objects."
+        },
+        {
+            deviation: "Rule 2.3",
+            reason: "Allow unused types. Some types are used by the application.."
+        },
+        {
             deviation: "Rule 2.4",
             reason: "Allow unused tags. Some compilers warn if types are not tagged."
         },
@@ -31,6 +39,10 @@
             reason: "Allow nested comments. Documentation blocks contain comments for example code."
         },
         {
+            deviation: "Rule 8.7",
+            reason: "API functions are not used by library. They must be externally visible for to be used by the application.."
+        },
+        {
             deviation: "Rule 11.5",
             reason: "Allow casts from void *. Contexts are passed as void * and must be cast to the correct data type before use."
         },
@@ -41,6 +53,10 @@
         {
             deviation: "Rule 21.2",
             reason: "Allow use of all names."
+        },
+        {
+            deviation: "Rule 21.3",
+            reason: "This library makes use of malloc. Allow use of malloc."
         }
     ]
 }
