--- a/test/cbmc/proofs/C_GetAttributeValue/Makefile
+++ b/test/cbmc/proofs/C_GetAttributeValue/Makefile
@@ -8,12 +8,25 @@ HARNESS_FILE = C_GetAttributeValue_harness
 # Litani dashboard. It can be human-readable and contain spaces if you wish.
 PROOF_UID = C_GetAttributeValue
 
-DEFINES +=
+# Size of attribute template.
+TEMPLATE_SIZE=9
+
+# Needs to be one bigger than TEMPLATE_SIZE
+UNWIND_SIZE=10
+
+DEFINES += -DTEMPLATE_SIZE=$(TEMPLATE_SIZE)
 INCLUDES += -I$(SRCDIR)/3rdparty/mbedtls/include
 INCLUDES += -I$(SRCDIR)/3rdparty/mbedtls_utils
 
 REMOVE_FUNCTION_BODY +=
-UNWINDSET +=
+
+# In the harness we are going to assume 8 as there are only 7 cases we care about in the loop, plus 1 for the 
+# default in the switch statement. We will unroll 1 extra time for good measure .
+# The number is arbitrary, but we bound the loop so it doesn't check forever.
+# NOTE: If this proof is slow we can reduce this unwind.
+UNWINDSET += C_GetAttributeValue.0:$(UNWIND_SIZE)
+UNWINDSET += harness.0:$(UNWIND_SIZE)
+
 
 PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE).c
 PROOF_SOURCES += $(SRCDIR)/test/cbmc/stubs/mbedtls_stubs.c
