Cleaned up proofs some.

--- a/test/cbmc/proofs/C_GenerateRandom/Makefile
+++ b/test/cbmc/proofs/C_GenerateRandom/Makefile
@@ -12,7 +12,13 @@ DEFINES +=
 INCLUDES += -I$(SRCDIR)/source/dependency/3rdparty/mbedtls/include
 INCLUDES += -I$(SRCDIR)/source/dependency/3rdparty/mbedtls_utils
 
-REMOVE_FUNCTION_BODY +=
+REMOVE_FUNCTION_BODY += C_Initialize
+REMOVE_FUNCTION_BODY += __CPROVER_file_local_core_pkcs11_mbedtls_c_prvMbedTLS_Initialize
+REMOVE_FUNCTION_BODY += C_Finalize
+REMOVE_FUNCTION_BODY += PKCS11_PAL_Initialize
+REMOVE_FUNCTION_BODY += mbedtls_ctr_drbg_init
+REMOVE_FUNCTION_BODY +=	mbedtls_ctr_drbg_seed
+REMOVE_FUNCTION_BODY +=	mbedtls_entropy_init
 UNWINDSET +=
 
 PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE).c
